Fix all the route urls I bungled

--- a/configuration/kraken/kraken.routes.yml
+++ b/configuration/kraken/kraken.routes.yml
@@ -25,11 +25,11 @@ parameters:
         ################################################################################################################
 
         kraken.application:
-            route: '/kraken/application/:application'
+            route: '/kraken/applications/:application'
             stack: ['login.bouncer', 'kraken.middleware.require.entity', 'kraken.application.page']
             conditions: {application: %routes.kraken.regex.hex%}
         kraken.status:
-            route: '/kraken/application/:application/status'
+            route: '/kraken/applications/:application/status'
             stack: ['login.bouncer', 'kraken.middleware.require.entity', 'kraken.status.page']
             conditions: {application: %routes.kraken.regex.hex%}
 
@@ -38,33 +38,33 @@ parameters:
         ################################################################################################################
 
         kraken.configuration:
-            route: '/kraken/application/:application/configuration/:configuration'
+            route: '/kraken/applications/:application/configurations/:configuration'
             stack: ['login.bouncer', 'kraken.middleware.require.entity', 'kraken.application.configuration.deployed.page']
             conditions:
                 application: %routes.kraken.regex.hex%
                 configuration: %routes.kraken.regex.hex%
 
         kraken.configuration.compare:
-            route: '/kraken/application/:application/configuration/:configuration/compare'
+            route: '/kraken/applications/:application/configurations/:configuration/compare'
             stack: ['login.bouncer', 'kraken.middleware.require.entity', 'kraken.configuration.compare.page']
             conditions:
                 application: %routes.kraken.regex.hex%
                 configuration: %routes.kraken.regex.hex%
 
         kraken.configuration.history.page1:
-            route: '/kraken/application/:application/configurations'
+            route: '/kraken/applications/:application/configurations'
             stack: ['login.bouncer', 'kraken.middleware.require.entity', 'kraken.configuration.history.page']
             conditions:
                 application: %routes.kraken.regex.hex%
         kraken.configuration.history:
-            route: '/kraken/application/:application/configuration/page/:page'
+            route: '/kraken/applications/:application/configurations/page/:page'
             stack: ['login.bouncer', 'kraken.middleware.require.entity', 'kraken.configuration.history.page']
             conditions:
                 application: %routes.kraken.regex.hex%
                 page: %routes.kraken.regex.digit%
 
         kraken.configuration.latest:
-            route: '/kraken/application/:application/environment/:environment'
+            route: '/kraken/applications/:application/environments/:environment'
             stack: ['login.bouncer', 'kraken.middleware.require.entity', 'kraken.configuration.latest.page']
             conditions:
                 application: %routes.kraken.regex.hex%
@@ -76,12 +76,12 @@ parameters:
 
         # add application
         kraken.add_application:
-            route: '/kraken/application/add'
+            route: '/kraken/applications/add'
             stack: ['login.bouncer', 'kraken.add_application.page']
 
         # add environment
         kraken.add_environment:
-            route: '/kraken/environment/add'
+            route: '/kraken/environments/add'
             stack: ['login.bouncer', 'kraken.add_environment.page']
 
         ################################################################################################################
@@ -90,7 +90,7 @@ parameters:
 
         # add environment to application
         kraken.application.add_target:
-            route: '/kraken/application/:application/environments'
+            route: '/kraken/applications/:application/environments'
             stack: ['login.bouncer', 'kraken.middleware.require.entity', 'kraken.application.add_target.page']
             conditions: {application: %routes.kraken.regex.hex%}
 
@@ -99,31 +99,31 @@ parameters:
         ################################################################################################################
 
         kraken.schema:
-            route: '/kraken/application/:application/schema'
+            route: '/kraken/applications/:application/configuration-schema'
             stack: ['login.bouncer', 'kraken.middleware.require.entity', 'kraken.application.schema.page']
             conditions:
                 application: %routes.kraken.regex.hex%
 
         kraken.schema.add:
-            route: '/kraken/application/:application/schema/add'
+            route: '/kraken/applications/:application/schemas/add'
             stack: ['login.bouncer', 'kraken.middleware.require.entity', 'kraken.schema.add.page']
             conditions: {application: %routes.kraken.regex.hex%}
 
         kraken.schema.edit:
-            route: '/kraken/schema/:schema/edit'
+            route: '/kraken/schemas/:schema/edit'
             stack: ['login.bouncer', 'kraken.middleware.require.entity', 'kraken.schema.edit.page']
             conditions:
                 schema: %routes.kraken.regex.hex%
 
         kraken.schema.remove.confirm:
             method: 'GET'
-            route: '/kraken/schema/:schema/remove'
+            route: '/kraken/schemas/:schema/remove'
             stack: ['login.bouncer', 'kraken.middleware.require.entity', 'kraken.schema.remove.page']
             conditions:
                 schema: %routes.kraken.regex.hex%
         kraken.schema.remove:
             method: 'POST'
-            route: '/kraken/schema/:schema/remove'
+            route: '/kraken/schemas/:schema/remove'
             stack: ['login.bouncer', 'kraken.middleware.require.entity', 'kraken.schema.remove.handler']
             conditions:
                 schema: %routes.kraken.regex.hex%
@@ -133,33 +133,33 @@ parameters:
         ################################################################################################################
 
         kraken.property.add:
-            route: '/kraken/application/:application/environment/:environment/add'
+            route: '/kraken/applications/:application/environments/:environment/add'
             stack: ['login.bouncer', 'kraken.middleware.require.entity', 'kraken.property.add.page']
             conditions:
                 application: %routes.kraken.regex.hex%
                 environment: %routes.kraken.regex.hex%
 
         kraken.property:
-            route: '/kraken/property/:property'
+            route: '/kraken/properties/:property'
             stack: ['login.bouncer', 'kraken.middleware.require.entity', 'kraken.property.page']
             conditions:
                 property: %routes.kraken.regex.hex%
 
         kraken.property.edit:
-            route: '/kraken/property/:property/edit'
+            route: '/kraken/properties/:property/edit'
             stack: ['login.bouncer', 'kraken.middleware.require.entity', 'kraken.property.edit.page']
             conditions:
                 property: %routes.kraken.regex.hex%
 
         kraken.property.remove.confirm:
             method: 'GET'
-            route: '/kraken/property/:property/remove'
+            route: '/kraken/properties/:property/remove'
             stack: ['login.bouncer', 'kraken.middleware.require.entity', 'kraken.property.remove.page']
             conditions:
                 property: %routes.kraken.regex.hex%
         kraken.property.remove:
             method: 'POST'
-            route: '/kraken/property/:property/remove'
+            route: '/kraken/properties/:property/remove'
             stack: ['login.bouncer', 'kraken.middleware.require.entity', 'kraken.property.remove.handler']
             conditions:
                 property: %routes.kraken.regex.hex%
