--- a/bower.json
+++ b/bower.json
@@ -12,9 +12,9 @@
         "jquery-searchable": "1.1.0",
         "html5sortable": "*",
         "tablesaw": "1.0.4",
-        "moment": "2.9.0",
         "nunjucks": "1.3.3",
         "js-signals": "1.0.0",
+        "sugarjs-date": "~1.5",
         "svg4everybody": "1.0.0",
         "typed.js": "v1.1",
         "underscore": "1.8.3",
