--- a/configuration/kraken/kraken.routes.yml
+++ b/configuration/kraken/kraken.routes.yml
@@ -39,7 +39,7 @@ parameters:
 
         kraken.configuration:
             route: '/kraken/applications/:application/configurations/:configuration'
-            stack: ['login.bouncer', 'kraken.middleware.require.entity', 'kraken.application.configuration.deployed.page']
+            stack: ['login.bouncer', 'kraken.middleware.require.entity', 'kraken.configuration.page']
             conditions:
                 application: %routes.kraken.regex.hex%
                 configuration: %routes.kraken.regex.hex%
