--- a/configuration/kraken/doctrine/Application.orm.yml
+++ b/configuration/kraken/doctrine/Application.orm.yml
@@ -24,5 +24,5 @@ QL\Kraken\Entity\Application:
         halRepository:
             targetEntity: QL\Hal\Core\Entity\Repository
             joinColumn:
-                name: hal_repository_id
+                name: hal_id
                 referencedColumnName: RepositoryId
