Add link to kraken from hal status, change repo to application in hal nomenclature in a few spots

--- a/configuration/config.global.yml
+++ b/configuration/config.global.yml
@@ -85,12 +85,13 @@ parameters:
     navigation.list:
         dashboard: 'Dashboard'
         queue: 'Queue'
-        repositories: 'Repositories'
+        repositories: 'Applications'
         servers: 'Servers'
         environments: 'Environments'
         users: 'Users'
         admin: 'Admin'
         help: 'Help'
+        kraken: 'Kraken'
 
     session.cookie.configuration:
         lifetime: '5 days'
