Add application edit

--- a/configuration/kraken/doctrine/Application.orm.yml
+++ b/configuration/kraken/doctrine/Application.orm.yml
@@ -21,7 +21,7 @@ QL\Kraken\Entity\Application:
 
     manyToOne:
 
-        halRepository:
+        halApplication:
             targetEntity: QL\Hal\Core\Entity\Repository
             joinColumn:
                 name: hal_id
